# aws_lambda_rust_template

./: Cargo.toml
src/: main.rs
src/controller/: hello.rs  mod.rs  upload.rs
src/error/: mod.rs
