[package]
name = "aws_lambda_rust_template"
version = "0.1.0"
edition = "2021"
autobins = false

[[bin]]
name = "bootstrap"
path = "examples/lambda.rs"

[dependencies]
log = "0.4"
thiserror = "1.0"

lambda_runtime = "0.5"
lambda_http = "0.5"

tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"